Add "1%=" to hidden volume setup description
Signed-off-by: Szczepan Zalega <szczepan@nitrokey.com>

--- a/src/ui/stick20hiddenvolumedialog.ui
+++ b/src/ui/stick20hiddenvolumedialog.ui
@@ -465,7 +465,7 @@
                </size>
               </property>
               <property name="text">
-               <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Size will be rounded down to integral percent of total storage size (%1MB)&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+               <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Size will be rounded down to integral percent of total storage size (1%=%1MB)&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
               </property>
              </widget>
             </item>
