--- a/resources.qrc
+++ b/resources.qrc
@@ -18,7 +18,7 @@
         <file alias="nitrokey_arabic.qm">i18n/nitrokey_arabic.qm</file>
     </qresource>
     <qresource prefix="/license">
-        <file alias="General">3RDPARTY</file>
+        <file alias="General">3RDPARTY.txt</file>
         <file alias="Nitrokey-App">LICENSE</file> <!-- GPLv3 -->
         <file alias="Qt-framework">LICENSE</file> <!-- GPLv3 -->
         <file alias="libnitrokey">libnitrokey/LICENSE</file> <!-- LGPLv3 -->
