Use similar translation. Translate not-translated.
Signed-off-by: Szczepan Zalega <szczepan@nitrokey.com>

--- a/src/ui/stick20debugdialog.ui
+++ b/src/ui/stick20debugdialog.ui
@@ -37,7 +37,7 @@
         <string/>
        </property>
        <property name="placeholderText">
-        <string>Debug log</string>
+        <string>Debug Log</string>
        </property>
       </widget>
      </item>
