--- a/src/ui/stick20lockfirmwaredialog.ui
+++ b/src/ui/stick20lockfirmwaredialog.ui
@@ -17,7 +17,7 @@
    </sizepolicy>
   </property>
   <property name="windowTitle">
-   <string>Lock firmware</string>
+   <string>Lock Firmware</string>
   </property>
   <property name="windowIcon">
    <iconset resource="../resources.qrc">
