--- a/src/ui/licensedialog.ui
+++ b/src/ui/licensedialog.ui
@@ -27,6 +27,9 @@
        <property name="readOnly">
         <bool>true</bool>
        </property>
+       <property name="plainText">
+        <string notr="true"/>
+       </property>
       </widget>
      </item>
      <item>
