--- a/src/ui/pindialog.ui
+++ b/src/ui/pindialog.ui
@@ -132,7 +132,7 @@
         <enum>Qt::StrongFocus</enum>
        </property>
        <property name="text">
-        <string>TextLabel</string>
+        <string notr="true">TextLabel</string>
        </property>
       </widget>
      </item>
