--- a/src/ui/stick20responsedialog.ui
+++ b/src/ui/stick20responsedialog.ui
@@ -43,7 +43,7 @@
         </font>
        </property>
        <property name="text">
-        <string>HeaderLabel</string>
+        <string notr="true">HeaderLabel</string>
        </property>
        <property name="textFormat">
         <enum>Qt::PlainText</enum>
@@ -58,7 +58,7 @@
        <item>
         <widget class="QLabel" name="LabelProgressWheel">
          <property name="text">
-          <string>LabelProgressWheel</string>
+          <string notr="true">LabelProgressWheel</string>
          </property>
          <property name="alignment">
           <set>Qt::AlignCenter</set>
@@ -113,7 +113,7 @@
       </font>
      </property>
      <property name="text">
-      <string>TextLabel</string>
+      <string notr="true">TextLabel</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
