--- a/src/ui/mainwindow.ui
+++ b/src/ui/mainwindow.ui
@@ -1399,6 +1399,26 @@
                <string>Debug log settings</string>
               </property>
               <layout class="QGridLayout" name="gridLayout_3">
+               <item row="1" column="0">
+                <widget class="QLabel" name="label_10">
+                 <property name="text">
+                  <string>Path for debug log file:</string>
+                 </property>
+                 <property name="buddy">
+                  <cstring>edit_debug_file_path</cstring>
+                 </property>
+                </widget>
+               </item>
+               <item row="3" column="0">
+                <widget class="QLabel" name="label_20">
+                 <property name="text">
+                  <string>Verbosity level:</string>
+                 </property>
+                 <property name="buddy">
+                  <cstring>spin_debug_verbosity</cstring>
+                 </property>
+                </widget>
+               </item>
                <item row="1" column="1">
                 <widget class="QLineEdit" name="edit_debug_file_path"/>
                </item>
@@ -1412,23 +1432,10 @@
                  </property>
                 </widget>
                </item>
-               <item row="1" column="0">
-                <widget class="QLabel" name="label_10">
+               <item row="1" column="2">
+                <widget class="QPushButton" name="btn_select_debug_file_path">
                  <property name="text">
-                  <string>Path for debug log file</string>
-                 </property>
-                 <property name="buddy">
-                  <cstring>edit_debug_file_path</cstring>
-                 </property>
-                </widget>
-               </item>
-               <item row="3" column="0">
-                <widget class="QLabel" name="label_20">
-                 <property name="text">
-                  <string>Verbosity level</string>
-                 </property>
-                 <property name="buddy">
-                  <cstring>spin_debug_verbosity</cstring>
+                  <string>Select path</string>
                  </property>
                 </widget>
                </item>
@@ -1439,12 +1446,73 @@
                  </property>
                 </widget>
                </item>
-               <item row="1" column="2">
-                <widget class="QPushButton" name="btn_select_debug_file_path">
-                 <property name="text">
-                  <string>Select path</string>
+              </layout>
+             </widget>
+            </item>
+            <item>
+             <widget class="QGroupBox" name="groupBox_2">
+              <property name="title">
+               <string>Clipboard settings</string>
+              </property>
+              <layout class="QGridLayout" name="gridLayout_4">
+               <item row="3" column="1">
+                <widget class="QSpinBox" name="spin_OTP_time">
+                 <property name="minimum">
+                  <number>10</number>
+                 </property>
+                 <property name="maximum">
+                  <number>600</number>
+                 </property>
+                 <property name="value">
+                  <number>120</number>
                  </property>
                 </widget>
+               </item>
+               <item row="1" column="0">
+                <widget class="QLabel" name="label_30">
+                 <property name="text">
+                  <string>TIme to store Password Safe secrets in clipboard (in seconds):</string>
+                 </property>
+                 <property name="buddy">
+                  <cstring>spin_debug_verbosity</cstring>
+                 </property>
+                </widget>
+               </item>
+               <item row="1" column="1">
+                <widget class="QSpinBox" name="spin_PWS_time">
+                 <property name="minimum">
+                  <number>10</number>
+                 </property>
+                 <property name="maximum">
+                  <number>600</number>
+                 </property>
+                 <property name="value">
+                  <number>60</number>
+                 </property>
+                </widget>
+               </item>
+               <item row="3" column="0">
+                <widget class="QLabel" name="label_31">
+                 <property name="text">
+                  <string>Time to store OTP secrets in clipboard (in seconds):</string>
+                 </property>
+                 <property name="buddy">
+                  <cstring>spin_debug_verbosity</cstring>
+                 </property>
+                </widget>
+               </item>
+               <item row="1" column="2">
+                <spacer name="horizontalSpacer_7">
+                 <property name="orientation">
+                  <enum>Qt::Horizontal</enum>
+                 </property>
+                 <property name="sizeHint" stdset="0">
+                  <size>
+                   <width>40</width>
+                   <height>20</height>
+                  </size>
+                 </property>
+                </spacer>
                </item>
               </layout>
              </widget>
